--- a/composer.json
+++ b/composer.json
@@ -3,23 +3,87 @@
   "description": "Install drops-8 with Composer on Pantheon.",
   "type": "project",
   "license": "MIT",
-  "repositories": [
-    {
+  "repositories": {
+    "0": {
       "type": "composer",
       "url": "https://packages.drupal.org/8"
+    },
+    "eleven": {
+      "type": "vcs",
+      "url": "https://github.com/thememachine/eleven"
     }
-  ],
+  },
     "require": {
     "composer/installers": "^1.0.20",
     "cweagans/composer-patches": "^1.0",
+    "desandro/imagesloaded": "^4.1",
+    "desandro/masonry": "^4.2",
     "drupal-composer/drupal-scaffold": "^2.0.1",
+    "drupal/admin_toolbar": "^1.19",
+    "drupal/adminimal_admin_toolbar": "^1.5",
+    "drupal/adminimal_theme": "1.x-dev",
+    "drupal/audiofield": "^1.5",
+    "drupal/block_visibility_groups": "^1.1",
+    "drupal/bootstrap": "3.x-dev",
+    "drupal/business_rules": "^1.0",
+    "drupal/coffee": "1.x-dev",
+    "drupal/cog": "^1.10",
+    "drupal/commerce": "^2.1",
+    "drupal/commerce_authnet": "^1",
+    "drupal/commerce_avatax": "1.x-dev",
+    "drupal/commerce_license": "2.x-dev",
+    "drupal/commerce_paypal": "^1.0@beta",
+    "drupal/commerce_recurring": "1.x-dev",
+    "drupal/commerce_square": "^1.0",
+    "drupal/commerce_stripe": "^1.0",
+    "drupal/components": "^1.1",
     "drupal/config_direct_save": "^1.0",
     "drupal/config_installer": "^1.0",
-    "drupal/console": "^1",
+    "drupal/config_split": "^1.3",
+    "drupal/console": "^1.0.0-rc8",
     "drupal/core": "^8",
+    "drupal/devel": "^1.0",
+    "drupal/easy_breadcrumb": "1.x-dev",
+    "drupal/embed": "^1.0",
+    "drupal/entity_browser": "^2.0",
+    "drupal/entity_embed": "^1.0@beta",
+    "drupal/extlink": "^1.0",
+    "drupal/field_group": "^3.0",
+    "drupal/field_permissions": "^1.0",
+    "drupal/file_browser": "^1",
+    "drupal/fpa": "2.x-dev",
+    "drupal/google_analytics": "^2.1",
+    "drupal/honeypot": "^1.27",
+    "drupal/inline_entity_form": "^1.0@beta",
+    "drupal/intercom": "^1.0",
+    "drupal/lockr": "^2.3",
+    "drupal/media_entity": "^1.6",
+    "drupal/media_entity_image": "^1.2",
+    "drupal/pathauto": "^1.0",
+    "drupal/rules": "^3.0@alpha",
+    "drupal/scheduler": "^1.0",
+    "drupal/search_api": "^1",
+    "drupal/search_kint": "^1.0",
+    "drupal/sendgrid_integration": "^1.1",
+    "drupal/seo_checklist": "^4.1",
+    "drupal/session_limit": "^1.0",
     "drupal/simple_block": "^1.0@beta",
+    "drupal/slick": "^1.0",
+    "drupal/slick_views": "^1.0@RC",
+    "drupal/token": "^1.0",
+    "drupal/twig_tweak": "^2",
+    "drupal/ui_patterns": "^1.0@RC",
+    "drupal/video_embed_field": "^2.0",
+    "drupal/views_bootstrap": "^3.0",
+    "drupal/views_field_view": "1.x-dev",
+    "drupal/webform": "^5.0@beta",
     "drush/drush": "~8",
+    "enyo/dropzone": "^5.1",
+    "fourkitchens/emulsify": "dev-develop",
+    "kenwheeler/slick": "^1.6",
+    "oomphinc/composer-installers-extender": "^1.1",
     "rvtraveller/qs-composer-installer": "^1.1",
+    "thememachine/eleven": "dev-8.x-1.x",
     "webflo/drupal-core-strict": "^8"
   },
   "require-dev": {
@@ -39,7 +103,7 @@
   "conflict": {
       "drupal/drupal": "*"
   },
-  "minimum-stability": "alpha",
+  "minimum-stability": "dev",
   "prefer-stable": true,
   "autoload": {
     "classmap": [
@@ -72,10 +136,18 @@
     "installer-paths": {
       "web/core": ["type:drupal-core"],
       "web/modules/contrib/{$name}": ["type:drupal-module"],
+      "web/libraries/{$name}": [
+        "type:drupal-library",
+        "desandro/imagesloaded",
+        "desandro/masonry",
+        "kenwheeler/slick",
+        "enyo/dropzone"
+      ],
       "web/profiles/contrib/{$name}": ["type:drupal-profile"],
       "web/themes/contrib/{$name}": ["type:drupal-theme"],
       "drush/contrib/{$name}": ["type:drupal-drush"]
     },
+    "installer-types": ["library"],
     "build-env": {
       "install-cms": [
         "drush site-install standard --account-mail={account-mail} --account-name={account-name} --account-pass={account-pass} --site-mail={site-mail} --site-name={site-name} --yes",
@@ -98,6 +170,15 @@
         ".htaccess",
         "web.config"
       ]
+    },
+    "patches": {
+      "drupal/core": {
+        "Adding Views Suggestions (https://www.drupal.org/project/drupal/issues/2118743)": "https://www.drupal.org/files/issues/2118743-139-twig-debug-info.patch",
+        "Adding active class to views (https://www.drupal.org/project/drupal/issues/2652000)": "https://www.drupal.org/files/issues/2652000-50.patch"
+      },
+      "drupal/commerce": {
+        "PriceTwigExtension throws error if amount is null (https://www.drupal.org/project/commerce/issues/2910190)": "https://www.drupal.org/files/issues/2910190-7.patch"
+      }
     }
   },
   "config": {
